add photos to gallery

--- a/gallery.html
+++ b/gallery.html
@@ -34,30 +34,39 @@
   <!-- GALLERY GRID -->
   <section id="gallery-grid">
   <div class="gallery-container">
-    <img src="assets/images/bird-one.jpg" alt="Bird One" loading="lazy">
-    <img src="assets/images/bird-two.jpg" alt="Bird Two" loading="lazy">
-    <img src="assets/images/bird-three.jpg" alt="Bird Three" loading="lazy">
-    <img src="assets/images/bird-four.jpg" alt="Bird Four" loading="lazy">
-    <img src="assets/images/bird-19.jpg" alt="Deer One" loading="lazy">
-    <img src="assets/images/deer-2.jpg" alt="Deer Two" loading="lazy">
-
-    <img src="assets/images/bird-five.jpg" alt="Bird Five" loading="lazy">
-    <img src="assets/images/bird-six.jpg" alt="Bird Six" loading="lazy">
-    <img src="assets/images/bird-seven.jpg" alt="Bird Seven" loading="lazy">
-    <img src="assets/images/bird-eight.jpg" alt="Bird Eight" loading="lazy">
-    <img src="assets/images/bird-nine.jpg" alt="Bird Nine" loading="lazy">
-    <img src="assets/images/bird-ten.jpg" alt="Bird Ten" loading="lazy">
-
-    <img src="assets/images/bird-12.jpg" alt="Bird Twelve" loading="lazy">
-    <img src="assets/images/bird-13.jpg" alt="Bird Thirteen" loading="lazy">
-    <img src="assets/images/bird-15.jpg" alt="Bird Fifteen" loading="lazy">
-    <img src="assets/images/squirrel-one.jpg" alt="Squirrel One" loading="lazy">
-    <img src="assets/images/squirrel-2.jpg" alt="Squirrel Two" loading="lazy">
-    <img src="assets/images/bird-16.jpg" alt="Bird Sixteen" loading="lazy">
-
-    <img src="assets/images/bird-17.jpg" alt="Bird Seventeen" loading="lazy">
-    <img src="assets/images/bird-18.jpg" alt="Bird Eighteen" loading="lazy">
-    <img src="assets/images/bird-19.jpg" alt="Bird Nineteen" loading="lazy">
+    <img src="assets/images/bird-one.jpg" alt="Bird Photo" loading="lazy">
+    <img src="assets/images/bird-two.jpg" alt="Bird Photo" loading="lazy">
+    <img src="assets/images/bird-three.jpg" alt="Bird Photo" loading="lazy">
+    <img src="assets/images/bird-four.jpg" alt="Bird Photo" loading="lazy">
+    <img src="assets/images/bird-19.jpg" alt="Deer Photo" loading="lazy">
+    <img src="assets/images/deer-2.jpg" alt="Deer Photo" loading="lazy">
+    <img src="assets/images/bird-five.jpg" alt="Bird Photo" loading="lazy">
+    <img src="assets/images/bird-six.jpg" alt="Bird Photo" loading="lazy">
+    <img src="assets/images/bird-seven.jpg" alt="Bird Photo" loading="lazy">
+    <img src="assets/images/bird-eight.jpg" alt="Bird Photo" loading="lazy">
+    <img src="assets/images/bird-nine.jpg" alt="Bird Photo" loading="lazy">
+    <img src="assets/images/bird-ten.jpg" alt="Bird Photo" loading="lazy">
+    <img src="assets/images/bird-12.jpg" alt="Bird Photo" loading="lazy">
+    <img src="assets/images/anitaswildbackyardphotography-01.jpg" alt="Bird Photo" loading="lazy">
+    <img src="assets/images/anitaswildbackyardphotography-02.jpg" alt="Bird Photo" loading="lazy">
+    <img src="assets/images/anitaswildbackyardphotography-03.jpg" alt="Squirrel Photo" loading="lazy">
+    <img src="assets/images/anitaswildbackyardphotography-04.jpg" alt="Bird Photo" loading="lazy">
+    <img src="assets/images/anitaswildbackyardphotography-05.jpg" alt="Bird Photo" loading="lazy">
+    <img src="assets/images/anitaswildbackyardphotography-06.jpg" alt="Squirrel Photo" loading="lazy">
+    <img src="assets/images/anitaswildbackyardphotography-07.jpg" alt="Bird Photo" loading="lazy">
+    <img src="assets/images/anitaswildbackyardphotography-08.jpg" alt="Bird Photo" loading="lazy">
+    <img src="assets/images/anitaswildbackyardphotography-09.jpg" alt="Squirrel Photo" loading="lazy">
+    <img src="assets/images/anitaswildbackyardphotography-10.jpg" alt="Bird Photo" loading="lazy">
+    <img src="assets/images/anitaswildbackyardphotography-11.jpg" alt="Bird Photo" loading="lazy">
+    <img src="assets/images/anitaswildbackyardphotography-12.jpg" alt="Squirrel Photo" loading="lazy">
+    <img src="assets/images/anitaswildbackyardphotography-13.jpg" alt="Squirrel Photo" loading="lazy">
+    <img src="assets/images/bird-13.jpg" alt="Bird Photo" loading="lazy">
+    <img src="assets/images/bird-15.jpg" alt="Bird Photo" loading="lazy">
+    <img src="assets/images/squirrel-one.jpg" alt="Squirrel Photo" loading="lazy">
+    <img src="assets/images/squirrel-2.jpg" alt="Squirrel Photo" loading="lazy">
+    <img src="assets/images/bird-16.jpg" alt="Bird Photo" loading="lazy">
+    <img src="assets/images/bird-17.jpg" alt="Bird Photo" loading="lazy">
+    <img src="assets/images/bird-18.jpg" alt="Bird Photo" loading="lazy">
   </div>
 </section>
 
