make logo clickable

--- a/gallery.html
+++ b/gallery.html
@@ -15,7 +15,9 @@
   <!-- NAVBAR -->
 <section id="navbar-section">
     <div class="navbar-left">
-      <img src="/assets/images/graphics/awbyp-submark.svg" alt="Anita secondary logo.">
+    <a href="index.html">
+  <img src="/assets/images/graphics/awbyp-submark.svg" alt="Anita secondary logo.">
+</a>
     </div>
     <div class="navbar-right">
       <a href="index.html">HOME</a>
