--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
   <!-- NAVBAR -->
   <section id="navbar-section">
     <div class="navbar-left">
-      <img src="/assets/images/graphics/awbyp-submark.svg" alt="Anita secondary logo.">
+      <a href="index.html">
+  <img src="/assets/images/graphics/awbyp-submark.svg" alt="Anita secondary logo.">
+</a>
     </div>
     <div class="navbar-right">
       <a href="gallery.html">GALLERY</a>
