add potos to gallery

--- a/gallery.html
+++ b/gallery.html
@@ -42,6 +42,9 @@
     <img src="assets/images/bird-four.jpg" alt="Bird Photo" loading="lazy">
     <img src="assets/images/bird-19.jpg" alt="Deer Photo" loading="lazy">
     <img src="assets/images/deer-2.jpg" alt="Deer Photo" loading="lazy">
+    <img src="assets/images/anitaswildbackyardphotography-03.jpg" alt="Squirrel Photo" loading="lazy">
+    <img src="assets/images/anitaswildbackyardphotography-14.jpg" alt="Squirrel Photo" loading="lazy">
+    <img src="assets/images/anitaswildbackyardphotography-15.jpg" alt="Bird Photo" loading="lazy">
     <img src="assets/images/bird-five.jpg" alt="Bird Photo" loading="lazy">
     <img src="assets/images/bird-six.jpg" alt="Bird Photo" loading="lazy">
     <img src="assets/images/bird-seven.jpg" alt="Bird Photo" loading="lazy">
@@ -51,7 +54,6 @@
     <img src="assets/images/bird-12.jpg" alt="Bird Photo" loading="lazy">
     <img src="assets/images/anitaswildbackyardphotography-01.jpg" alt="Bird Photo" loading="lazy">
     <img src="assets/images/anitaswildbackyardphotography-02.jpg" alt="Bird Photo" loading="lazy">
-    <img src="assets/images/anitaswildbackyardphotography-03.jpg" alt="Squirrel Photo" loading="lazy">
     <img src="assets/images/anitaswildbackyardphotography-04.jpg" alt="Bird Photo" loading="lazy">
     <img src="assets/images/anitaswildbackyardphotography-05.jpg" alt="Bird Photo" loading="lazy">
     <img src="assets/images/anitaswildbackyardphotography-06.jpg" alt="Squirrel Photo" loading="lazy">
@@ -69,6 +71,7 @@
     <img src="assets/images/bird-16.jpg" alt="Bird Photo" loading="lazy">
     <img src="assets/images/bird-17.jpg" alt="Bird Photo" loading="lazy">
     <img src="assets/images/bird-18.jpg" alt="Bird Photo" loading="lazy">
+    <img src="assets/images/anitaswildbackyardphotography-17.jpg" alt="deer Photo" loading="lazy">
   </div>
 </section>
 
