move scroll bar and resize flashing logo

--- a/index.html
+++ b/index.html
@@ -30,21 +30,8 @@
   <!-- HERO -->
 <section id="hero">
   <div class="hero-title">
-    <h1 id="anita-title">Anita's Wild</h1>
-    <h1 id="anita-2">backyard</h1>
+    <h1 id="anita-title">Anita's Wild <br>Backyard</h1>
     <h1 id="photography-title">photography</h1>
-  </div>
-</section>
-  <section id="about-me">
-    <div class="photo-of-anita">
-      <img src="/assets/images/anita-photographer.jpg" alt="A photo of Anita using camera.">
-    </div>
-  <div class="about-anita">
-    <div class="headline-wrapper">
-      <h1><span>Hello,</span><br><span>I'm Anita!</span></h1>
-    </div>
-    <p>I’m originally from Germany, nestled near the edge of the Black Forest. I’m a wife, a mother to two daughters, and a proud Oma of two. I’ve always enjoyed capturing the beauty around me through photography. Whether it’s a quiet bird in the trees or a peaceful landscape, taking photos helps me slow down and appreciate the little things. It’s just a hobby, but it brings me a lot of joy!</p>
-    <button onclick="document.location='gallery.html'">VIEW MY GALLERY</button>
   </div>
 </section>
 <!-- SCROLL BAR -->
@@ -84,6 +71,19 @@
     </p>
   </div>
 </section>
+  <section id="about-me">
+    <div class="photo-of-anita">
+      <img src="/assets/images/anita-photographer.jpg" alt="A photo of Anita using camera.">
+    </div>
+  <div class="about-anita">
+    <div class="headline-wrapper">
+      <h1><span>Hello,</span><br><span>I'm Anita!</span></h1>
+    </div>
+    <p>I’m originally from Germany, nestled near the edge of the Black Forest. I’m a wife, a mother to two daughters, and a proud Oma of two. I’ve always enjoyed capturing the beauty around me through photography. Whether it’s a quiet bird in the trees or a peaceful landscape, taking photos helps me slow down and appreciate the little things. It’s just a hobby, but it brings me a lot of joy!</p>
+    <button onclick="document.location='gallery.html'">VIEW MY GALLERY</button>
+  </div>
+</section>
+
 <!-- BUTTON MENU -->
   <section id="button-menu">
     <div class="button-menu-container">
