--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
     <div class="button-menu-container">
     <button onclick="document.location='gallery.html'">Gallery</button>
     <button onclick="window.open('https://www.facebook.com/groups/989120233288366', '_blank')">Facebook</button>
-    <button onclick="window.open('https://www.facebook.com/groups/989120233288366', '_blank')">Flickr</button>
-    <button onclick="window.open('https://www.flickr.com/photos/202656504@N08', '_blank')">Pinterest</button>
+    <button onclick="window.open('https://www.flickr.com/photos/202656504@N08', '_blank')">Flickr</button>
+    <button onclick="window.open('https://www.pinterest.com/anitaswildbackyardphotography')">Pinterest</button>
     <!-- <button onclick="window.open('https://www.etsy.com', '_blank')">Shop</button> -->
     <!-- <button onclick="document.location='contact.html'">Contact</button> -->
     </div>
