fix spelling in alt tag

--- a/gallery.html
+++ b/gallery.html
@@ -58,7 +58,7 @@
     <img src="assets/images/anitaswildbackyardphotography-05.jpg" alt="Bird Photo" loading="lazy">
     <img src="assets/images/anitaswildbackyardphotography-06.jpg" alt="Squirrel Photo" loading="lazy">
     <img src="assets/images/anitaswildbackyardphotography-07.jpg" alt="Bird Photo" loading="lazy">
-            <img src="assets/images/anitas-wild-backyard-photograpgy-21.jpg" alt="Racoon Photo" loading="lazy">
+    <img src="assets/images/anitas-wild-backyard-photograpgy-21.jpg" alt="Raccoon Photo" loading="lazy">
     <img src="assets/images/anitaswildbackyardphotography-08.jpg" alt="Bird Photo" loading="lazy">
     <img src="assets/images/anitaswildbackyardphotography-09.jpg" alt="Squirrel Photo" loading="lazy">
     <img src="assets/images/anitaswildbackyardphotography-10.jpg" alt="Bird Photo" loading="lazy">
@@ -73,12 +73,8 @@
     <img src="assets/images/bird-17.jpg" alt="Bird Photo" loading="lazy">
     <img src="assets/images/bird-18.jpg" alt="Bird Photo" loading="lazy">
     <img src="assets/images/anitaswildbackyardphotography-17.jpg" alt="deer Photo" loading="lazy">
-
-        <img src="assets/images/anitas-wild-backyard-photograpgy-20.jpg" alt="Deer Photo" loading="lazy" >
-
-
-
-        <img src="assets/images/anitas-wild-backyard-photograpgy-22.jpg" alt="Racoon Photo" loading="lazy">
+    <img src="assets/images/anitas-wild-backyard-photograpgy-20.jpg" alt="Deer Photo" loading="lazy" >
+    <img src="assets/images/anitas-wild-backyard-photograpgy-22.jpg" alt="Raccoon Photo" loading="lazy">
 
   </div>
 </section>
